--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,45 @@
 .App {
+  /* text-align: center; */
+  background: linear-gradient(to bottom left, #ff9966 0%, #ff99cc 100%);
+  height: 100vh;
+  box-sizing: border-box;
+  padding-top: 32px;
+
+}
+
+.todo {
+  background-color: azure;
+  width: 400px;
+  height: 500px;
   text-align: center;
+  border-radius: 4px;
+  margin: 0px auto;
+  overflow: hidden;
+  position: relative;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-float infinite 3s ease-in-out;
+@media (max-width: 767px) {
+  .App {
+    padding-top: 0;
+  }
+  .todo {
+    height: 100vh;
+    width: 100vw;
+    padding-bottom: 0;
   }
 }
 
-.App-header {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.container {
+  width: 100%;
+  max-width: 800px;
+  /* padding: 0 15px; */
+  box-sizing: border-box;
+  margin: auto;
+
 }
 
-.App-link {
-  color: rgb(112, 76, 182);
-}
-
-@keyframes App-logo-float {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(10px);
-  }
-  100% {
-    transform: translateY(0px);
-  }
+.todoApp{
+  background-color: rgb(252, 252, 252);
+  box-shadow: 10px 10px 5px grey;
+  border-radius: 20px;
 }
