--- a/src/App.css
+++ b/src/App.css
@@ -1,75 +1,41 @@
-/* Todos */
-.todo-list ul {
-  padding: 0 10px 10px 10px;
-  list-style-type: none;
- }
- 
- .todo-list li {
-  padding: 10px;
-  cursor: pointer;
-  margin: 10px 0;
-  border-radius: 4px;
-  background: rgb(240, 240, 240);
-  color: black;
- }
- 
- .todo-list li input[type='checkbox'] {
-  -ms-transform: scale(2); /* IE */
-  -moz-transform: scale(2); /* FF */
-  -webkit-transform: scale(2); /* Safari and Chrome */
-  -o-transform: scale(2); /* Opera */
-  transform: scale(2);
-  padding: 10px;
-  float: right;
- }
- 
- .todo-list li.completed {
-  background: rgb(119, 218, 243);
- }
- 
- .todo-list li button {
-  float: right;
-  margin-right: 20px;
- }
- 
- .todo-list li button:hover {
-  cursor: pointer;
-  background: red;
-  color: white;
- }
- 
- /* Navbar */
- .navbar {
-  padding: 5px;
+*{
+  /* background-image: linear-gradient(purple, pink); */
+}
+.App {
   text-align: center;
-  background: rgb(240, 240, 240);
-  color: black;
- }
- 
- .navbar ul {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  list-style: none;
-  padding: 0;
- }
- 
- /* TodoForm */
- form {
-  padding: 10px;
- }
- 
- input[type='text'] {
-  width: 100%;
-  box-sizing: border-box;
-  padding: 10px;
-  margin: 6px 0;
-  border: 0;
- }
- 
- input[type='submit'] {
-  margin: 10px auto;
-  padding: 10px;
-  border: 0;
-  display: block;
- }
+  /* background-image: linear-gradient(purple, pink); */
+
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.App_conten {
+  /* background-image: linear-gradient(purple, pink); */
+  border: 1px solid #191970 ;
+  width: 600p;
+  max-width: 750px;
+  margin: auto;
+  margin-top: 10px;
+  box-shadow: 0px 0px 5px 5px #87CEFA;
+  border-radius: 8px;
+  background-color: #F0F8FF;
+}
