--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,18 @@
-.App {
-  font-family: Avenir, Helvetica, Arial, sans-serif;
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: rgb(219, 219, 219);
-  margin: 20px auto;
-  width: 90%;
-  max-width: 800px;
- }
+  /* background-image: linear-gradient(purple, pink); */
+  /* background-color: #F0FFFF; */
+  /* background-image: linear-gradient(45deg,#87CEFA ,#6495ED); */
+  background-image: url('./img/background.jpg');
+
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
