--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,34 @@
-*{
-  /* background-image: linear-gradient(purple, pink); */
-}
 .App {
+  position: relative;
   text-align: center;
-  /* background-image: linear-gradient(purple, pink); */
-
+  max-width: 600px;
+  margin: auto;
+  border: 1px solid #ccc;
+  margin-top: 40px;
+  min-height: 600px;
+  background-color: #fff;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-radius: 15px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Todos {
+  max-width: 500px;
+  margin: auto;
+  height: 380px;
+  background-color: #fff;
 }
+
+hr {
+  background-color: #000;
+  font-weight: 100;
+  width: 595px;
+}
+
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-float infinite 3s ease-in-out;
   }
 }
 
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.App_conten {
-  /* background-image: linear-gradient(purple, pink); */
-  border: 1px solid #191970 ;
-  width: 600p;
-  max-width: 750px;
-  margin: auto;
-  margin-top: 10px;
-  box-shadow: 0px 0px 5px 5px #87CEFA;
-  border-radius: 8px;
-  background-color: #F0F8FF;
-}
