--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,8 +1,46 @@
-.Header {
+
+.title {
+    font-weight: 600;
+    font-size: 50px;    
+    margin: 0;
+}
+
+.btnAddTodo {
+    width: auto;
+    height: auto;
+    padding: 12px 16px;
+    background-color: #00DD00;
+    border: 1px solid #006600;
+
+    border: none;
     color: #fff;
-    font-size: 50px;
-    background-image: linear-gradient(45deg,#87CEFA ,#6495ED);
-     /* background-image: linear-gradient( to right, , );; */
-     font-weight: 500;
-     /* box-shadow: 1px 2px 0px 0px #1e90ff; */
+    font-size: 16px;
+    border-radius: 8px;
+}
+
+.btnAddTodo:hover {
+    cursor: pointer;
+    background-color: #00FF00;
+}
+
+.Header_Content {
+    /* position: relative; */
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: space-between;
+    padding: 24px;
+    border-bottom: 1px solid;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background-color: #E6E6FA;
+    /* overflow: 0.2; */
+    opacity: 0.3;
+    z-index: 1;
 }
