--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,9 @@
   background-color: #fff;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   border-radius: 15px;
+  /* background: linear-gradient(180deg,#f05053,#e1eec3,#355c7d) no-repeat; */
+  /* background-color: #ddd; */
+
 }
 
 .Todos {
