--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,28 +1,26 @@
 .Footer_content {
     /* position: absolute;
     bottom: 14%; */
+    /* color: #c06c84; */
 }
 
 .Nav_footer {
-    border-top: 1px solid;
+    border-top: 1px solid #c06c84;
     margin-bottom: 10px;
 }
 
-/* .Footer_content hr {
-    background-color: #000;
-    font-weight: 100;
-    width: 595px;
-} */
 
-.Footer_content button {
+
+.Footer_content .btn {
     margin-top: 10px;
     padding: 16px 24px;
     border-radius: 10px;
-    /* border: 1px solid; */
     font-size: 16px;
-    /* background-color: #BBBBBB; */
     border: none;
     background-color: #fff;
+    margin: 0 4px;
+    color: #c06c84;
+
 }
 
 .btn:hover {
@@ -31,10 +29,12 @@
 
 .click_btn {
     margin: 0 4px;
-    border: 1px solid #ddd;
-    box-shadow: 0px 0px 1px 1px ;
+    margin-top: 10px;
+    padding: 16px 24px;
+    border-radius: 10px;
+    font-size: 16px;
+    border: 1px solid;
+    background-color: #c06c84;
+    color: #fff;
 }
 
-.btn {
-    margin: 0 4px;
-}
