--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,13 +3,14 @@
     font-weight: 600;
     font-size: 50px;    
     margin: 0;
+    color: #c06c84;
 }
 
 .btnAddTodo {
     width: auto;
     height: auto;
     padding: 12px 16px;
-    background-color: #00DD00;
+    background-color: #c06c84;
     border: 1px solid #006600;
 
     border: none;
@@ -20,7 +21,7 @@
 
 .btnAddTodo:hover {
     cursor: pointer;
-    background-color: #00FF00;
+    background-color: #d08b9e;
 }
 
 .Header_Content {
@@ -30,7 +31,8 @@
     align-items: center;
     justify-content: space-between;
     padding: 24px;
-    border-bottom: 1px solid;
+    border-bottom: 1px solid #c06c84;
+    /* background-color: #c06c84; */
 }
 
 .overlay {
