--- a/src/components/Todos/todoInputs/TodoInputs.css
+++ b/src/components/Todos/todoInputs/TodoInputs.css
@@ -51,7 +51,7 @@
 }
 
 .btnAdd {
-    background-color: #00DD00;
+    background-color: #c06c84;
     border: 1px solid #006600;
     /* width: 150px; */
     height: 50px;
@@ -77,7 +77,7 @@
 
 .btnAdd:hover{
     cursor: pointer;
-    background-color: #00FF00;
+    background-color: #d08b9e;
 }
 
 .btnCancel:hover{
