--- a/src/components/Todos/todoItems/TodoList/TodoList.css
+++ b/src/components/Todos/todoItems/TodoList/TodoList.css
@@ -1,9 +1,10 @@
 .Todolist_content {
     overflow: auto;
-    height: 425px;
+    height: 623px;
     padding: 16px;
     /* background: linear-gradient(180deg,#c06c84,#6c5b7b,#355c7d) no-repeat; */
     background-color: #f8edf0;
+    /* width: 700px; */
 }
 
 .Todolist_content::-webkit-scrollbar {
